<resources>
    <string name="app_name">musicPlayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist">playlist</string>
    <string name="singer">singer</string>
    <string name="settings">settings</string>
    <string name="songs">Songs</string>
    <string name="player">player</string>
    <string name="name_of_the_music_player">Name of the music player</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="singer1">Singer</string>
    <string name="radioactive">Radioactive</string>
    <string name="imagine_dragons">Imagine Dragons</string>
    <string name="_1_0">1.0</string>
    <string name="pulsar">Pulsar</string>
    <string name="_2010">2010</string>
</resources>